Fix Search button being squashed on Edge

--- a/packages/react-search-ui-views/src/styles/themes/reference-ui/components/_search-box.scss
+++ b/packages/react-search-ui-views/src/styles/themes/reference-ui/components/_search-box.scss
@@ -6,6 +6,7 @@
   font-family: $fontFamily;
 
   @include element("submit") {
+    flex-shrink: 0;
     font-family: inherit;
     font-size: 14px;
     padding: 16px;
